k8s/00-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubeplayground
  labels:
    app.kubernetes.io/part-of: kubeplayground
