k8s/01-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hello-pod
  namespace: playground
  labels:
    app: hello
spec:
  containers:
    - name: my-container
      image: nginx:1.27-alpine
      ports:
        - containerPort: 80
