k8s/12-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeplayground-api
  namespace: kubeplayground
  labels:
    app: kubeplayground-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubeplayground-api
  template:
    metadata:
      labels:
        app: kubeplayground-api
    spec:
      serviceAccountName: kubeplayground-sa
      containers:
        - name: api
          image: kubeplayground-api:0.8.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
              name: http
          startupProbe:
            httpGet:
              path: /api/health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /api/health
              port: http
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /api/health
              port: http
            periodSeconds: 5
          resources:
            requests:
              memory: "96Mi"
              cpu: "120m"
            limits:
              memory: "160Mi"
              cpu: "700m"
