k8s/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: playground
  labels:
    app: hello
spec:
  type: ClusterIP
  selector:
    app: hello
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
